# BRS-PSP-Research-Initiative

./: .gitignore  BRS-Extract.ps1  LICENSE  README.MD  build.py  pyproject.toml
.github/workflows/: github-action-mirror-sync.yml
Docs/Repository/: Milestones.MD  Mirrors.MD
Game/: README.md
Scripts/: BRS-Dig-For-Bones.bms  BRS-Extract.bms  BRS-Lpk.bms  BRS-Model-Data.bms  BRS-Vol.bms  BRS-Xor.bms  README.MD
Scripts/init/: init.ps1  init.py  stage1.ps1  stage1.py  stage10.ps1  stage10.py  stage15.ps1  stage15.py  stage2.ps1  stage2.py  stage3.ps1  stage3.py  stage4.ps1  stage4.py  stage5.ps1  stage5.py
Scripts/nim/: build.bat  build.sh
Scripts/powershell/: Download-Tools.ps1
Scripts/quickbms/: BRS-Dig-For-Bones.bms  BRS-Extract.bms
Scripts/shared/: .env  globals.py  helpers.py
Source/: README.MD
Source/bae_arch/: .gitignore  atlas.config  bae_arch.nimble  build.zig  build.zig.zon  config.nims
Source/bms_extractor/: bms_extractor.nimble.old  config.nims
Source/cacher/: .gitignore  cacher.nimble
Source/model_extractor/: model_extractor.nimble
Specifications/: 3D-Pipeline-Notes-and-Observations  File Formats.md  README.MD  VOL File Structure.md
Specifications/Field-Models/: FCHR_B_CYZ00.MD  FCHR_B_CYZ00B.MD  FCHR_B_CYZ00P.MD  FCHR_B_KAL00.MD  FCHR_B_KAL00B.MD  FCHR_B_KAL00P.MD  FCHR_B_MAZ00.MD  FCHR_B_MAZ00B.MD  FCHR_B_MAZ01.MD  FCHR_B_MAZ01P.MD  FCHR_B_MEE00.MD  FCHR_B_MEE00B.MD  FCHR_B_MEE00P.MD  FCHR_B_NAF00.MD  FCHR_B_NAF00B.MD  FCHR_B_NAF00P.MD  FCHR_B_RIR00.MD  FCHR_B_RIR00B.MD  FCHR_B_RIR00P.MD  FCHR_B_RIR01.MD  FCHR_B_WRS00.MD  (+157 more)
(+305 files in other folders)
